@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-09T16:26:14Z",
-  "count_outdated" : 119,
-  "uniques_outdated" : 81,
-  "count" : 135,
-  "uniques" : 92,
+  "timestamp" : "2022-09-10T01:59:40Z",
+  "count_outdated" : 125,
+  "uniques_outdated" : 86,
+  "count" : 139,
+  "uniques" : 95,
   "clones" : [
-    {
-      "timestamp": "2022-08-26T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 6 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 5 ]
-    },
     {
       "timestamp": "2022-08-29T00:00:00Z",
       "count": 8,
