@@ -1,12 +1,7 @@
 {
-  "count": 16,
+  "count": 14,
   "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2022-08-26T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-08-29T00:00:00Z",
       "count": 8,
